# pingust

./: Cargo.toml  README.md
src/: error.rs  main.rs  msg.rs  ping.rs
src/output/: bar.rs  mod.rs  notif.rs  term.rs
