[package]
name = "pingust"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.37", features = ["derive"] }
colored = "3.0.0"
notify-rust = "4.11.7"
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["full"] }

[profile.dev]
debug = false
opt-level = 0

[profile.dev.package."*"]
opt-level = 3

[profile.release]
strip = true
lto = "fat"
opt-level = 3
codegen-units = 1
